--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
         <p style="text-align: justify;">
-       A confident and reliable IT professional with 3+ years of experience of working as a Technical support engineer and resolving any support issues that are raised to the service desk. Possessing professional training & certifications from CISCO, Microsoft, VMware etc. and have proven track record in network/system support helping clients and colleagues resolve complex technical IT issues. An excellent communicator can relate well with people at all levels and has the flexibility of working well as part of a team and on my own.
+       I have 3+ years of experience ensuring tech peace of mind for businesses. Specializes in technical system support and has a proven track record of providing technical support in a fast-paced environment and possessing professional training & certifications from CISCO and Microsoft. If you're looking for a support partner who brings a positive attitude and is genuinely interested in helping users succeed, I'd love to connect.
       </p>
       </div>
       <div class="col-md-5 offset-md-1">
@@ -90,13 +90,13 @@
             <div class="pb-1">Phone</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+923330465698</div>
+            <div class="pb-1 text-secondary">+97154690166</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">Gulshan Ravi, Lahore, Pakistan</div>
+            <div class="pb-1 text-secondary">Dubai, UAE</div>
           </div>
         </div>
       </div>
@@ -377,24 +377,6 @@ escalation
           <div>
             
             <a href="https://www.credly.com/badges/c49188b3-59c3-47e9-883b-b54f3e92a194" target="_blank">See credential</a>
-          </div>
-        </div>
-      </div>
-      <div class="timeline-card timeline-card-success card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Huawei Certified ICT Associate (HCIA)</div>
-          <div class="text-muted text-small mb-2">Issued Aug 2021 . Expires Aug 2024</div>
-          <div>
-            <a href="https://1drv.ms/b/s!Aj7NcbTEGC_PhCEJXGDbadCrFNzI?e=pWJ3Il" target="_blank">See credential</a>
-          </div>
-        </div>
-      </div>
-       <div class="timeline-card timeline-card-success card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Huawei Certified ICT Professional (HCIP)</div>
-          <div class="text-muted text-small mb-2">Issued Sep 2021 . Expires Sep 2024</div>
-          <div>
-            <a href="https://1drv.ms/b/s!Aj7NcbTEGC_PhCINUItqcOFdXMaH?e=ojKdg9" target="_blank">See credential</a>
           </div>
         </div>
       </div>
