--- a/index.html
+++ b/index.html
@@ -75,12 +75,6 @@
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
           <div class="col-sm-4">
-            <div class="pb-1">DOB</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">12/08/1995</div>
-          </div>
-          <div class="col-sm-4">
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
@@ -97,6 +91,12 @@
           </div>
           <div class="col-sm-8">
             <div class="pb-1 text-secondary">Dubai, UAE</div>
+          </div>
+          <div class="col-sm-4">
+            <div class="pb-1">LinkedIn</div>
+          </div>
+          <div class="col-sm-8">
+            <div class="pb-1 text-secondary" href="https://www.linkedin.com/in/ahmed-imtiaz-3578911ab" target="_blank">www.linkedin.com/in/ahmed-imtiaz</div>
           </div>
         </div>
       </div>
