--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             <div class="pb-1">LinkedIn</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary" href="https://www.linkedin.com/in/ahmed-imtiaz-3578911ab" target="_blank">www.linkedin.com/in/ahmed-imtiaz</div>
+            <div class="pb-1 text-secondary" href="https://www.linkedin.com/in/ahmed-imtiaz" target="_blank">
+              Click to visit LinkedIn</div>
           </div>
         </div>
       </div>
