--- a/index.html
+++ b/index.html
@@ -96,11 +96,9 @@
             <div class="pb-1">LinkedIn</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">
+            <div class="pb-1 text-secondary" href="https://www.linkedin.com/in/ahmed-imtiaz"> Click to vsit LinkedIn
 
-              <div href="https://www.linkedin.com/in/ahmed-imtiaz" target="_blank">
-
-              Click to visit LinkedIn</div>
+             
 
             </div>
           </div>
