--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Ahmed Imtiaz</h2>
+        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Rizwan Shizada</h2>
         <p data-aos="fade-left" data-aos-delay="100">IT Support Specialist</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="AhmedImtiaz, ITSystemEngineer CV.pdf" target="_blank">Download CV</a>
   <a class="btn btn-success shadow-sm mt-1" href="https://www.credly.com/users/ahmed-imtiaz.b8faf28f/badges" target="_blank">Certifications & Badges</a>
@@ -151,18 +151,6 @@
       </div>
       <hr>
       <h2 class="h5 mb-3">Network & System Administration</h2>
-      <div class="col-md-6">
-        <div class="mb-2"><span>Strong knowledge of Cisco IOS</span>
-          <!-- <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div> -->
-        </div>
-        <div class="mb-2"><span>ACL , Traffic Filtering</span>
-         <!--  <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-          </div> -->
-        </div>
-      </div>
       <div class="col-md-6">
         <div class="mb-2"><span>VPNs( GRE, DMVPN, Site-to-Site, Point-to-Site) </span>
           <!-- <div class="progress my-1">
