--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Rizwan Shizada</h2>
+        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Ahmed Imtiaz</h2>
         <p data-aos="fade-left" data-aos-delay="100">IT Support Specialist</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="AhmedImtiaz, ITSystemEngineer CV.pdf" target="_blank">Download CV</a>
   <a class="btn btn-success shadow-sm mt-1" href="https://www.credly.com/users/ahmed-imtiaz.b8faf28f/badges" target="_blank">Certifications & Badges</a>
