--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Ahmed Imtiaz</h2>
         <p data-aos="fade-left" data-aos-delay="100">IT Support Specialist</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="AhmedImtiaz, ITSystemEngineer CV.pdf" target="_blank">Download CV</a>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="cv/AhmedImtiaz-CV.pdf" target="_blank">Download CV</a>
   <a class="btn btn-success shadow-sm mt-1" href="https://www.credly.com/users/ahmed-imtiaz.b8faf28f/badges" target="_blank">Certifications & Badges</a>
         </div>
       </div>
