work experience update

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">IT Support Engineer<span class="text-muted h6">at CubeZix Technologies, <small>Dubai, UAE</small> </span></div>
+          <div class="h5 mb-1">IT Support Engineer <span class="text-muted h6">at CubeZix Technologies, <small>Dubai, UAE</small> </span></div>
           <div class="text-muted text-small mb-2">Nov 2023 - June 2024 . 8 mos</div>
           <div>
            <div>
@@ -270,7 +270,7 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Technical Support Engineer<span class="text-muted h6">at Prima Systems, <small> Pakistan</small> </span></div>
+          <div class="h5 mb-1">Technical Support Engineer <span class="text-muted h6">at Prima Systems, <small> Pakistan</small> </span></div>
           <div class="text-muted text-small mb-2">Feb 2023 - Sep 2023 . 8 mos</div>
           <div>
            <div>
@@ -306,7 +306,7 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">System & Network Engineer <span class="text-muted h6">at FutureNow Technologies<small> Pakistan</small> </span></div>
+          <div class="h5 mb-1">System & Network Engineer <span class="text-muted h6">at FutureNow Technologies, <small>Pakistan</small> </span></div>
           <div class="text-muted text-small mb-2">Jan 2022 - Jan 2023 . 1 Year</div>
           <div>
            <div>
@@ -345,7 +345,7 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">System Support Engineer <span class="text-muted h6">at Dunya News<small> Pakistan</small> </span></div>
+          <div class="h5 mb-1">System Support Engineer <span class="text-muted h6">at Dunya News<small>, Pakistan</small> </span></div>
           <div class="text-muted text-small mb-2">April 2021 - Dec 2021 . 8 mos</div>
           <div>
            <div>
