--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">IT Analyst<span class="text-muted h6">at Everlight Radiology, <small>Dubai, UAE</small> </span></div>
-          <div class="text-muted text-small mb-2">April 2025 - Present</div>
+          <div class="h5 mb-1">IT Analyst <span class="text-muted h6">at Everlight Radiology, <small>Dubai, UAE</small> </span></div>
+          <div class="text-muted text-small mb-2">April 2025 - Present . Full Time . On-Site</div>
           <div>
            <div>
             <!-- JD goes here -->
@@ -228,11 +228,46 @@
         </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">End-User Support Engineer <span class="text-muted h6">at National Bank of Fujairah, <small>Dubai, UAE</small> </span></div>
+          <div class="text-muted text-small mb-2">July 2024 - Jan 2025 . 8 mos . Contract . On-Site</div>
+          <div>
+           <div>
+            <ul>
+              <li>
+                 Provide first-line technical support for hardware, software, and network-related issues via phone, email, or in-person.
+              </li>
+              <li>
+                Troubleshoot and resolve technical problems related to operating systems (Windows, macOS), software applications, emails apps, and peripheral devices (printers, scanners, etc.).
+              </li>
+              <li>
+                Support Office 365 applications, including Outlook, SharePoint, Teams, and other associated services.
+              </li>
+              <li>
+                Set up and configure new machines for new joiners, ensuring all necessary software and network connections are established.
+              </li>
+              <li>
+                Installation & configuration of software applications on iPads, Tablets for sales department.
+              </li>
+              <li>
+                Responding and resolving the support requests and service tickets in a timely manner.
+              </li>
+              <li>
+                Troubleshooting computer hardware, software, systems, printers and scanners.
+              </li>
+              <li>
+                Liaise with external vendors or internal IT teams for complex issues or hardware repairs.
+              </li>
+              
+            </ul>
+          </div> 
+        </div>
+        </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">IT Support Engineer <span class="text-muted h6">at CubeZix Technologies, <small>Dubai, UAE</small> </span></div>
-          <div class="text-muted text-small mb-2">Nov 2023 - June 2024 . 8 mos</div>
+          <div class="text-muted text-small mb-2">Nov 2023 - June 2024 . 8 mos . Full Time . On-Site</div>
           <div>
            <div>
             <ul>
@@ -271,7 +306,7 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">Technical Support Engineer <span class="text-muted h6">at Prima Systems, <small> Pakistan</small> </span></div>
-          <div class="text-muted text-small mb-2">Feb 2023 - Sep 2023 . 8 mos</div>
+          <div class="text-muted text-small mb-2">Feb 2023 - Sep 2023 . 8 mos . Full Time . On-Site</div>
           <div>
            <div>
             <ul>
@@ -307,7 +342,7 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">System & Network Engineer <span class="text-muted h6">at FutureNow Technologies, <small>Pakistan</small> </span></div>
-          <div class="text-muted text-small mb-2">Jan 2022 - Jan 2023 . 1 Year</div>
+          <div class="text-muted text-small mb-2">Jan 2022 - Jan 2023 . 1 Year . Full Time . On-Site</div>
           <div>
            <div>
             <ul>
@@ -346,7 +381,7 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">System Support Engineer <span class="text-muted h6">at Dunya News<small>, Pakistan</small> </span></div>
-          <div class="text-muted text-small mb-2">April 2021 - Dec 2021 . 8 mos</div>
+          <div class="text-muted text-small mb-2">April 2021 - Dec 2021 . 8 mos . Full Time . On-Site</div>
           <div>
            <div>
             <ul>
