--- a/index.html
+++ b/index.html
@@ -374,7 +374,6 @@
                 Configuration & maintenance of CISCO IP phones, CCTV, IP cameras.
               </li>
             </ul>
-          </div> 
         </div>
         </div>
       </div>
@@ -401,6 +400,12 @@
                 Assisted in troubleshooting network connectivity and hardware/software issues.
               </li>
             </ul>
+             <div class="h5 mb-1">Skills: </div>
+
+          <div class="text-muted text-small mb-2">
+            
+            Help Desk Support · IT Support and Troubleshooting · Computer Hardware & Software · Customer Support · Local Area Network (LAN) · Active Directory
+          </div>
           </div> 
         </div>
         </div>
