--- a/index.html
+++ b/index.html
@@ -374,6 +374,14 @@
                 Configuration & maintenance of CISCO IP phones, CCTV, IP cameras.
               </li>
             </ul>
+             <div class="h6 mb-1">Skills: 
+<div class="text-muted text-small mb-2">
+            
+            Microsoft Office 365 · Windows Server (AD DS, DCHP, DNS) · IT Support and Troubleshooting · Documentation · Computer Hardware & Software · Voice over IP (VoIP) · System and Network Support · Customer Support · Local Area Network (LAN) · Active Directory · 2nd Line IT Support
+          </div>
+
+             </div>
+
         </div>
         </div>
       </div>
@@ -400,7 +408,7 @@
                 Assisted in troubleshooting network connectivity and hardware/software issues.
               </li>
             </ul>
-             <div class="h5 mb-1">Skills: </div>
+             <div class="h6 mb-1">Skills: </div>
 
           <div class="text-muted text-small mb-2">
             
