--- a/index.html
+++ b/index.html
@@ -376,8 +376,11 @@
             </ul>
              <div class="h6 mb-1">Skills: 
 <div class="text-muted text-small mb-2">
+  <small>
+    Microsoft Office 365 · Windows Server (AD DS, DCHP, DNS) · IT Support and Troubleshooting · Documentation · Computer Hardware & Software · Voice over IP (VoIP) · System and Network Support · Customer Support · Local Area Network (LAN) · Active Directory · 2nd Line IT Support
+  </small>
             
-            Microsoft Office 365 · Windows Server (AD DS, DCHP, DNS) · IT Support and Troubleshooting · Documentation · Computer Hardware & Software · Voice over IP (VoIP) · System and Network Support · Customer Support · Local Area Network (LAN) · Active Directory · 2nd Line IT Support
+            
           </div>
 
              </div>
