--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">IT Analyst <span class="text-muted h6">at Everlight Radiology, <small>Dubai, UAE</small> </span></div>
-          <div class="text-muted text-small mb-2">April 2025 - Present . Full Time . On-Site</div>
+          <div class="text-muted text-small mb-2">April 2025 - Present . Full Time . Hybrid</div>
           <div>
            <div>
             <!-- JD goes here -->
                                 <div class="h6 mb-1">Skills: </div>
        <div class="text-muted text-small mb-2">
   
-      emote desktop manager · Amazon Connect · Active Directory · LogMeIn · Jira Service Desk · Confluence · SQL Server Management Studio · Healthcare Information Technology (HIT) · Firewalls · Fortinet · Virtual Private Network (VPN) · IT Support and Troubleshooting · Application Support · SQL 
+      Remote desktop manager · Amazon Connect · Active Directory · LogMeIn · Jira Service Desk · Confluence · SQL Server Management Studio · Healthcare Information Technology (HIT) · Firewalls · Fortinet · Virtual Private Network (VPN) · IT Support and Troubleshooting · Application Support · SQL 
           </div>
           </div> 
         </div>
